--- a/package.json
+++ b/package.json
@@ -16,15 +16,28 @@
     "url": "git://github.com/subspace/vdf.git"
   },
   "license": "MIT",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "src"
+    "dist"
   ],
   "scripts": {
-    "test": "tape tests/**/*.js"
+    "build": "npm run clean && npm run lint && npm run compile && npm run minify && npm run copy-wasm-js",
+    "clean": "rm -rf dist",
+    "compile": "tsc",
+    "minify": "uglifyjs dist/index.js > dist/index.min.js",
+    "copy-wasm-js": "cp src/vdf.* dist/",
+    "lint": "tslint --project .",
+    "test": "npm run lint && ts-node node_modules/.bin/tape tests/**/*.ts"
+  },
+  "dependencies": {
+    "@types/node": "^11.13.4"
   },
   "devDependencies": {
     "tape": "^4.10.1",
-    "@types/node": "^11.13.4"
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.4",
+    "uglify-es": "^3.3.9",
+    "ts-node": "^8.1.0"
   }
 }
