--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "@types/node": "^11.13.4"
   },
   "devDependencies": {
+    "@types/tape": "^4.2.33",
     "tape": "^4.10.1",
+    "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "typescript": "^3.4.4",
-    "uglify-es": "^3.3.9",
-    "ts-node": "^8.1.0"
+    "uglify-es": "^3.3.9"
   }
 }
